--- a/Sudoku_Web/CSS/main.css
+++ b/Sudoku_Web/CSS/main.css
@@ -1,15 +1,27 @@
-﻿table {
-    border-collapse: collapse;
+﻿
+table{
+    background-color:green;
 }
 
-
-table, td, th {
-    border: 1px solid black;
-  
+td {
+    border: 1px solid green;
+    text-align:center;
+    margin:1% 1% 1% 1%;   
+    
 }
-
 
 .mainTable
 {
-    margin:7% 10% 0% 5%;
+    margin:7% 10% 5% 28%;
+    
+   
+}
+
+.table-cell{
+     width:52px; 
+    padding : 1px;
+}
+
+input:focus{
+    background-color:red;
 }
