--- a/Sudoku_Web/CSS/main.css
+++ b/Sudoku_Web/CSS/main.css
@@ -1,4 +1,7 @@
-﻿
+﻿body{
+    background-color : #c2c2a3;
+}
+
 table{
     background-color:green;
 }
@@ -22,6 +25,9 @@ td {
     padding : 1px;
 }
 
+input{
+    background-color: #ebebe0;
+}
 input:focus{
     background-color:red;
 }
